message ProtoCoordinate {
	required int32 x = 1;
	required int32 y = 2;
}

message ProtoMappable {
	required ProtoCoordinate c = 1;
	required int32 id = 2;
}

message ProtoUnit {
	required ProtoMappable m = 1;
	required int32 p_id = 2;
}

message ProtoTile {
	required int32 type = 1;
	required string c = 2;
}

message ProtoTurn {
	repeated ProtoUnit units = 1;
	repeated ProtoTile tiles = 2;
	required int32 turn_number = 3;
	required int32 id_iterator = 4;
}

message ProtoGame {
	repeated ProtoTurn turns = 1;
}